chevereto/chevereto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chevereto
  name: chevereto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chevereto
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chevereto
    spec:
      containers:
      - env:
        - name: CHEVERETO_DB_HOST
          value: db
        - name: CHEVERETO_DB_NAME
          value: chevereto
        - name: CHEVERETO_DB_PASSWORD
          value: chevereto
        - name: CHEVERETO_DB_PREFIX
          value: chv_
        - name: CHEVERETO_DB_USERNAME
          value: chevereto
        image: nmtan/chevereto:1.1.0
        name: chevereto
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        securityContext:
          readOnlyRootFilesystem: false
      #    runAsUser: 12000
          runAsGroup: 32999
        livenessProbe:
          tcpSocket:
            port: 80
        readinessProbe:
          httpGet:
            port: 80
        volumeMounts:
        - mountPath: /var/www/html/images
          name: chevereto-images
      restartPolicy: Always
      volumes:
      - name: chevereto-images
        persistentVolumeClaim:
          claimName: chevereto-images-pvc
