chevereto/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      securityContext:
        fsGroup: 33
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: chevereto
        - name: MYSQL_PASSWORD
          value: chevereto
        - name: MYSQL_ROOT_PASSWORD
          value: chevereto_root
        - name: MYSQL_USER
          value: chevereto
        image: mariadb
        name: db
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: chevereto-db
      restartPolicy: Always
      volumes:
      - name: chevereto-db
        persistentVolumeClaim:
          claimName: chevereto-db-pvc
