chevereto/allow-chevereto-external-connection.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: chevereto-allow-external
spec:
  podSelector:
    matchLabels:
      app: chevereto
  ingress:
  - from: []
    ports:
      - port: 80
