chevereto/chevereto-allow-trafic-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: chevereto-accessdb-policy
spec:
  podSelector: 
    matchLabels:
      app: chevereto
  policyTypes:
  - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: db
