chevereto/deny-all-ingress-trafics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-policy
spec:
  podSelector: {}
  ingress: []
